--- a/AFML 2.1.ipynb
+++ b/AFML 2.1.ipynb
@@ -51,9 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T19:53:28.764302Z",
+     "start_time": "2025-01-16T19:53:28.297059Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -67,13 +70,18 @@
     "#numpy 1.17.3\n",
     "#pandas 1.0.3\n",
     "#sklearn 0.21.3"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T19:53:46.567486Z",
+     "start_time": "2025-01-16T19:53:46.468648Z"
+    }
+   },
    "source": [
     "# Intraday sample data courtesy of mlfinlab\n",
     "\n",
@@ -94,7 +102,9 @@
     "                 header=0, \n",
     "                 parse_dates = True, \n",
     "                 index_col=['date_time'])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
