--- a/AFML 3.2.ipynb
+++ b/AFML 3.2.ipynb
@@ -21,38 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of CPU core:  4\n",
-      "Machine info:  Windows-10-10.0.18362-SP0\n",
-      "Python 3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]\n",
-      "Numpy 1.17.3\n",
-      "Pandas 1.0.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Wei_X\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1500x800 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-27T18:44:32.270404Z",
+     "start_time": "2025-01-27T18:44:32.229378Z"
     }
-   ],
+   },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -68,12 +42,14 @@
     "#pandas 1.0.3\n",
     "#sklearn 0.21.3\n",
     "\n",
-    "dollar = pd.read_csv('./research/Sample_data/dollar_bars.txt', \n",
+    "dollar = pd.read_csv('./Sample_data/dollar_bars.txt',\n",
     "                 sep=',', \n",
     "                 header=0, \n",
     "                 parse_dates = True, \n",
     "                 index_col=['date_time'])\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -2519,4 +2495,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
