research folder added for library

--- a/AFML 3.1.ipynb
+++ b/AFML 3.1.ipynb
@@ -22,8 +22,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:00:56.107784Z",
-     "start_time": "2025-01-28T10:00:55.094013Z"
+     "end_time": "2025-01-29T07:33:11.483556Z",
+     "start_time": "2025-01-29T07:33:10.292544Z"
     }
    },
    "source": [
@@ -56,9 +56,9 @@
      "output_type": "stream",
      "text": [
       "Num of CPU core:  128\n",
-      "Machine info:  Linux-6.8.0-51-generic-x86_64-with-glibc2.39\n",
-      "Python 3.12.3 (main, Jan 17 2025, 18:03:48) [GCC 13.3.0]\n",
-      "Numpy 2.1.3\n",
+      "Machine info:  Linux-6.8.0-52-generic-x86_64-with-glibc2.39\n",
+      "Python 3.12.8 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 16:31:09) [GCC 11.2.0]\n",
+      "Numpy 1.26.4\n",
       "Pandas 2.2.3\n",
       "/home/mmx/PycharmProjects/AFML/research.py\n"
      ]
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:00:56.117958Z",
-     "start_time": "2025-01-28T10:00:56.112340Z"
+     "end_time": "2025-01-29T07:33:11.498830Z",
+     "start_time": "2025-01-29T07:33:11.493244Z"
     }
    },
    "cell_type": "code",
@@ -81,8 +81,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:00:56.588230Z",
-     "start_time": "2025-01-28T10:00:56.189155Z"
+     "end_time": "2025-01-29T07:33:11.896867Z",
+     "start_time": "2025-01-29T07:33:11.587870Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +122,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:00:56.599484Z",
-     "start_time": "2025-01-28T10:00:56.595743Z"
+     "end_time": "2025-01-29T07:33:11.909088Z",
+     "start_time": "2025-01-29T07:33:11.905557Z"
     }
    },
    "source": [
@@ -163,8 +163,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:01:01.280062Z",
-     "start_time": "2025-01-28T10:00:56.706889Z"
+     "end_time": "2025-01-29T07:33:16.349780Z",
+     "start_time": "2025-01-29T07:33:11.989005Z"
     }
    },
    "source": [
@@ -200,59 +200,6 @@
      "output_type": "stream",
      "text": [
       "[                                             t1                      sl  \\\n",
-      "2016-04-28 08:11:31.935 2016-04-29 10:02:20.933 2016-04-28 19:53:44.370   \n",
-      "2016-04-28 08:58:32.457 2016-04-29 10:02:20.933                     NaT   \n",
-      "2016-04-28 10:52:03.623 2016-04-29 11:47:49.541 2016-04-28 19:31:00.850   \n",
-      "2016-04-28 12:01:23.295 2016-04-29 12:37:34.150 2016-04-28 19:25:12.672   \n",
-      "2016-04-28 13:01:28.025 2016-04-29 13:28:30.173 2016-04-28 19:25:12.672   \n",
-      "...                                         ...                     ...   \n",
-      "2016-12-30 20:59:58.848                     NaT                     NaT   \n",
-      "2016-12-30 21:00:00.352                     NaT                     NaT   \n",
-      "2016-12-30 21:00:24.294                     NaT                     NaT   \n",
-      "2016-12-30 21:03:03.027                     NaT                     NaT   \n",
-      "2016-12-30 21:13:31.990                     NaT                     NaT   \n",
-      "\n",
-      "                                             pt  \n",
-      "2016-04-28 08:11:31.935 2016-04-28 13:30:00.579  \n",
-      "2016-04-28 08:58:32.457 2016-04-28 13:01:28.025  \n",
-      "2016-04-28 10:52:03.623 2016-04-28 13:39:44.393  \n",
-      "2016-04-28 12:01:23.295 2016-04-28 13:44:48.201  \n",
-      "2016-04-28 13:01:28.025 2016-04-28 13:44:48.201  \n",
-      "...                                         ...  \n",
-      "2016-12-30 20:59:58.848                     NaT  \n",
-      "2016-12-30 21:00:00.352                     NaT  \n",
-      "2016-12-30 21:00:24.294                     NaT  \n",
-      "2016-12-30 21:03:03.027                     NaT  \n",
-      "2016-12-30 21:13:31.990                     NaT  \n",
-      "\n",
-      "[7408 rows x 3 columns]] this out\n",
-      "[                                             t1                      sl  \\\n",
-      "2016-04-28 08:11:31.935 2016-04-29 10:02:20.933 2016-04-28 19:53:44.370   \n",
-      "2016-04-28 08:58:32.457 2016-04-29 10:02:20.933                     NaT   \n",
-      "2016-04-28 10:52:03.623 2016-04-29 11:47:49.541 2016-04-28 19:31:00.850   \n",
-      "2016-04-28 12:01:23.295 2016-04-29 12:37:34.150 2016-04-28 19:25:12.672   \n",
-      "2016-04-28 13:01:28.025 2016-04-29 13:28:30.173 2016-04-28 19:25:12.672   \n",
-      "...                                         ...                     ...   \n",
-      "2016-12-30 20:59:58.848                     NaT                     NaT   \n",
-      "2016-12-30 21:00:00.352                     NaT                     NaT   \n",
-      "2016-12-30 21:00:24.294                     NaT                     NaT   \n",
-      "2016-12-30 21:03:03.027                     NaT                     NaT   \n",
-      "2016-12-30 21:13:31.990                     NaT                     NaT   \n",
-      "\n",
-      "                                             pt  \n",
-      "2016-04-28 08:11:31.935 2016-04-28 13:30:00.579  \n",
-      "2016-04-28 08:58:32.457 2016-04-28 13:01:28.025  \n",
-      "2016-04-28 10:52:03.623 2016-04-28 13:39:44.393  \n",
-      "2016-04-28 12:01:23.295 2016-04-28 13:44:48.201  \n",
-      "2016-04-28 13:01:28.025 2016-04-28 13:44:48.201  \n",
-      "...                                         ...  \n",
-      "2016-12-30 20:59:58.848                     NaT  \n",
-      "2016-12-30 21:00:00.352                     NaT  \n",
-      "2016-12-30 21:00:24.294                     NaT  \n",
-      "2016-12-30 21:03:03.027                     NaT  \n",
-      "2016-12-30 21:13:31.990                     NaT  \n",
-      "\n",
-      "[7408 rows x 3 columns],                                              t1                      sl  \\\n",
       "2015-01-05 14:54:26.286 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
       "2015-01-05 14:57:13.616 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
       "2015-01-05 15:01:57.494 2015-01-06 15:06:20.346 2015-01-05 16:21:16.062   \n",
@@ -280,6 +227,32 @@
       "\n",
       "[7408 rows x 3 columns]] this out\n",
       "[                                             t1                      sl  \\\n",
+      "2015-01-05 14:54:26.286 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
+      "2015-01-05 14:57:13.616 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
+      "2015-01-05 15:01:57.494 2015-01-06 15:06:20.346 2015-01-05 16:21:16.062   \n",
+      "2015-01-05 15:07:29.012 2015-01-06 15:13:19.811 2015-01-05 15:40:45.114   \n",
+      "2015-01-05 15:13:09.655 2015-01-06 15:13:19.811 2015-01-05 16:10:05.172   \n",
+      "...                                         ...                     ...   \n",
+      "2015-09-16 19:10:49.674 2015-09-17 19:13:55.901                     NaT   \n",
+      "2015-09-16 19:22:06.172 2015-09-17 19:22:59.160                     NaT   \n",
+      "2015-09-16 19:32:47.172 2015-09-17 19:36:50.249                     NaT   \n",
+      "2015-09-16 19:45:01.362 2015-09-17 19:47:12.228                     NaT   \n",
+      "2015-09-16 19:54:03.737 2015-09-17 19:55:09.135                     NaT   \n",
+      "\n",
+      "                                             pt  \n",
+      "2015-01-05 14:54:26.286                     NaT  \n",
+      "2015-01-05 14:57:13.616                     NaT  \n",
+      "2015-01-05 15:01:57.494                     NaT  \n",
+      "2015-01-05 15:07:29.012                     NaT  \n",
+      "2015-01-05 15:13:09.655                     NaT  \n",
+      "...                                         ...  \n",
+      "2015-09-16 19:10:49.674 2015-09-17 18:13:04.358  \n",
+      "2015-09-16 19:22:06.172 2015-09-17 18:44:39.366  \n",
+      "2015-09-16 19:32:47.172 2015-09-17 18:44:39.366  \n",
+      "2015-09-16 19:45:01.362 2015-09-17 18:44:39.366  \n",
+      "2015-09-16 19:54:03.737 2015-09-17 18:13:04.358  \n",
+      "\n",
+      "[7408 rows x 3 columns],                                              t1                      sl  \\\n",
       "2016-04-28 08:11:31.935 2016-04-29 10:02:20.933 2016-04-28 19:53:44.370   \n",
       "2016-04-28 08:58:32.457 2016-04-29 10:02:20.933                     NaT   \n",
       "2016-04-28 10:52:03.623 2016-04-29 11:47:49.541 2016-04-28 19:31:00.850   \n",
@@ -305,7 +278,8 @@
       "2016-12-30 21:03:03.027                     NaT  \n",
       "2016-12-30 21:13:31.990                     NaT  \n",
       "\n",
-      "[7408 rows x 3 columns],                                              t1                      sl  \\\n",
+      "[7408 rows x 3 columns]] this out\n",
+      "[                                             t1                      sl  \\\n",
       "2015-01-05 14:54:26.286 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
       "2015-01-05 14:57:13.616 2015-01-06 15:01:01.702 2015-01-05 15:40:45.114   \n",
       "2015-01-05 15:01:57.494 2015-01-06 15:06:20.346 2015-01-05 16:21:16.062   \n",
@@ -330,6 +304,32 @@
       "2015-09-16 19:32:47.172 2015-09-17 18:44:39.366  \n",
       "2015-09-16 19:45:01.362 2015-09-17 18:44:39.366  \n",
       "2015-09-16 19:54:03.737 2015-09-17 18:13:04.358  \n",
+      "\n",
+      "[7408 rows x 3 columns],                                              t1                      sl  \\\n",
+      "2016-04-28 08:11:31.935 2016-04-29 10:02:20.933 2016-04-28 19:53:44.370   \n",
+      "2016-04-28 08:58:32.457 2016-04-29 10:02:20.933                     NaT   \n",
+      "2016-04-28 10:52:03.623 2016-04-29 11:47:49.541 2016-04-28 19:31:00.850   \n",
+      "2016-04-28 12:01:23.295 2016-04-29 12:37:34.150 2016-04-28 19:25:12.672   \n",
+      "2016-04-28 13:01:28.025 2016-04-29 13:28:30.173 2016-04-28 19:25:12.672   \n",
+      "...                                         ...                     ...   \n",
+      "2016-12-30 20:59:58.848                     NaT                     NaT   \n",
+      "2016-12-30 21:00:00.352                     NaT                     NaT   \n",
+      "2016-12-30 21:00:24.294                     NaT                     NaT   \n",
+      "2016-12-30 21:03:03.027                     NaT                     NaT   \n",
+      "2016-12-30 21:13:31.990                     NaT                     NaT   \n",
+      "\n",
+      "                                             pt  \n",
+      "2016-04-28 08:11:31.935 2016-04-28 13:30:00.579  \n",
+      "2016-04-28 08:58:32.457 2016-04-28 13:01:28.025  \n",
+      "2016-04-28 10:52:03.623 2016-04-28 13:39:44.393  \n",
+      "2016-04-28 12:01:23.295 2016-04-28 13:44:48.201  \n",
+      "2016-04-28 13:01:28.025 2016-04-28 13:44:48.201  \n",
+      "...                                         ...  \n",
+      "2016-12-30 20:59:58.848                     NaT  \n",
+      "2016-12-30 21:00:00.352                     NaT  \n",
+      "2016-12-30 21:00:24.294                     NaT  \n",
+      "2016-12-30 21:03:03.027                     NaT  \n",
+      "2016-12-30 21:13:31.990                     NaT  \n",
       "\n",
       "[7408 rows x 3 columns],                                              t1                      sl  \\\n",
       "2015-09-16 19:59:40.048 2015-09-17 19:59:49.542                     NaT   \n",
@@ -364,7 +364,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-28 10:01:01.253272 100.0% _pt_sl_t1 done after 0.07 mins. Remaining 0.0 mins..\n"
+      "2025-01-29 07:33:16.316769 100.0% _pt_sl_t1 done after 0.07 mins. Remaining 0.0 mins..\n"
      ]
     },
     {
@@ -481,8 +481,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T10:01:54.820726Z",
-     "start_time": "2025-01-28T10:01:54.788181Z"
+     "end_time": "2025-01-29T07:33:16.396130Z",
+     "start_time": "2025-01-29T07:33:16.368962Z"
     }
    },
    "source": [
@@ -619,16 +619,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T07:33:16.508647Z",
+     "start_time": "2025-01-29T07:33:16.504966Z"
+    }
+   },
+   "source": [
+    "m_label['bin'].value_counts()\n",
+    "\n",
+    "# Here is a quick look at our 'bin' values.\n",
+    "# Apparently we have a rare label, bin = 0"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "bin\n",
        " 1.0    11343\n",
        "-1.0    10784\n",
        " 0.0       80\n",
-       "Name: bin, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 7,
@@ -636,25 +647,30 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "m_label['bin'].value_counts()\n",
-    "\n",
-    "# Here is a quick look at our 'bin' values.\n",
-    "# Apparently we have a rare label, bin = 0"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T07:33:16.728903Z",
+     "start_time": "2025-01-29T07:33:16.725379Z"
+    }
+   },
+   "source": [
+    "m_label['bin'].value_counts(normalize = True)\n",
+    "\n",
+    "# basically it's 0.003602 of all our metalabels. Max is 1"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "bin\n",
        " 1.0    0.510785\n",
        "-1.0    0.485613\n",
        " 0.0    0.003602\n",
-       "Name: bin, dtype: float64"
+       "Name: proportion, dtype: float64"
       ]
      },
      "execution_count": 8,
@@ -662,19 +678,43 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "m_label['bin'].value_counts(normalize = True)\n",
-    "\n",
-    "# basically it's 0.003602 of all our metalabels. Max is 1"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T07:33:16.877705Z",
+     "start_time": "2025-01-29T07:33:16.871647Z"
+    }
+   },
+   "source": [
+    "drop_meta_label = rs.drop_label(events = m_label, \n",
+    "                                min_pct = 0.05)\n",
+    "\n",
+    "drop_meta_label # Show some example\n",
+    "\n",
+    "# In the below case we dropped all bin = 0, while keeping only 1 & -1"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "                              ret  bin\n",
+       "2015-01-05 14:54:26.286 -0.003448 -1.0\n",
+       "2015-01-05 14:57:13.616 -0.002957 -1.0\n",
+       "2015-01-05 15:01:57.494 -0.003701 -1.0\n",
+       "2015-01-05 15:07:29.012 -0.002957 -1.0\n",
+       "2015-01-05 15:13:09.655 -0.003451 -1.0\n",
+       "...                           ...  ...\n",
+       "2016-12-30 18:02:22.880 -0.003242 -1.0\n",
+       "2016-12-30 18:36:03.267 -0.002904 -1.0\n",
+       "2016-12-30 19:02:57.783 -0.002908 -1.0\n",
+       "2016-12-30 19:55:31.030  0.003028  1.0\n",
+       "2016-12-30 20:50:57.567  0.002915  1.0\n",
+       "\n",
+       "[22127 rows x 2 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -758,22 +798,6 @@
        "</table>\n",
        "<p>22127 rows × 2 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                              ret  bin\n",
-       "2015-01-05 14:54:26.286 -0.003448 -1.0\n",
-       "2015-01-05 14:57:13.616 -0.002957 -1.0\n",
-       "2015-01-05 15:01:57.494 -0.003701 -1.0\n",
-       "2015-01-05 15:07:29.012 -0.002957 -1.0\n",
-       "2015-01-05 15:13:09.655 -0.003451 -1.0\n",
-       "...                           ...  ...\n",
-       "2016-12-30 18:02:22.880 -0.003242 -1.0\n",
-       "2016-12-30 18:36:03.267 -0.002904 -1.0\n",
-       "2016-12-30 19:02:57.783 -0.002908 -1.0\n",
-       "2016-12-30 19:55:31.030  0.003028  1.0\n",
-       "2016-12-30 20:50:57.567  0.002915  1.0\n",
-       "\n",
-       "[22127 rows x 2 columns]"
       ]
      },
      "execution_count": 9,
@@ -781,14 +805,31 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "drop_meta_label = rs.drop_label(events = m_label, \n",
-    "                                min_pct = 0.05)\n",
-    "\n",
-    "drop_meta_label # Show some example\n",
-    "\n",
-    "# In the below case we dropped all bin = 0, while keeping only 1 & -1"
-   ]
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T07:33:17.035339Z",
+     "start_time": "2025-01-29T07:33:17.033901Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T07:33:17.065024Z",
+     "start_time": "2025-01-29T07:33:17.063576Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
