--- a/AFML me.ipynb
+++ b/AFML me.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:10.808948Z",
-     "start_time": "2025-02-04T22:11:09.505840Z"
+     "end_time": "2025-02-05T22:02:32.645122Z",
+     "start_time": "2025-02-05T22:02:31.421011Z"
     }
    },
    "source": [
@@ -20,13 +20,13 @@
     "import my_afml_fncs as my_afml"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:10.830666Z",
-     "start_time": "2025-02-04T22:11:10.815100Z"
+     "end_time": "2025-02-05T22:02:32.666622Z",
+     "start_time": "2025-02-05T22:02:32.651669Z"
     }
    },
    "cell_type": "code",
@@ -124,18 +124,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:10.911511Z",
-     "start_time": "2025-02-04T22:11:10.905579Z"
+     "end_time": "2025-02-05T22:02:32.731589Z",
+     "start_time": "2025-02-05T22:02:32.725691Z"
     }
    },
    "cell_type": "code",
@@ -146,17 +146,20 @@
    ],
    "id": "6e06e5adaa81480c",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:10.959953Z",
-     "start_time": "2025-02-04T22:11:10.957080Z"
+     "end_time": "2025-02-05T22:02:32.771349Z",
+     "start_time": "2025-02-05T22:02:32.767360Z"
     }
    },
    "cell_type": "code",
-   "source": "vol.mean()",
+   "source": [
+    "vol2=my_afml.getDailyVol(volume_bars_df.close)\n",
+    "vol2.mean()"
+   ],
    "id": "7534182368804a1e",
    "outputs": [
     {
@@ -165,69 +168,172 @@
        "0.0037081056391128505"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:11.093345Z",
-     "start_time": "2025-02-04T22:11:11.084476Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "es_cusum_events=my_afml.getTEvents(volume_bars_df.close,vol.mean())",
-   "id": "bda605f52f5e935e",
-   "outputs": [],
    "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:11:11.115897Z",
-     "start_time": "2025-02-04T22:11:11.113327Z"
+     "end_time": "2025-02-05T22:02:32.865387Z",
+     "start_time": "2025-02-05T22:02:32.862450Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "t1=volume_bars_df.close.index.searchsorted(es_cusum_events+pd.Timedelta(days=1))\n",
-    "t1=t1[t1<volume_bars_df.close.shape[0]]\n",
-    "t1=pd.Series(volume_bars_df.close.index[t1],index=es_cusum_events[:t1.shape[0]])"
+    "vol2.mean()\n",
+    "vol.mean()"
    ],
-   "id": "9e12d9d207f17615",
-   "outputs": [],
+   "id": "bda605f52f5e935e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0037081056391128505"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T22:14:43.676879Z",
-     "start_time": "2025-02-04T22:11:13.509178Z"
+     "end_time": "2025-02-05T22:02:32.971362Z",
+     "start_time": "2025-02-05T22:02:32.964170Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "es_cusum_events=my_afml.getTEvents(volume_bars_df.close,vol2.mean())",
+   "id": "9e12d9d207f17615",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-05T22:02:33.019572Z",
+     "start_time": "2025-02-05T22:02:33.015902Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "t1=my_afml.getVb(volume_bars_df.close,es_cusum_events)\n",
+    "t1"
+   ],
+   "id": "35e141b8ea6b0ef",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2024-11-15 13:33:55.913324   2024-11-18 06:58:08.108243\n",
+       "2024-11-15 14:30:17.843538   2024-11-18 06:58:08.108243\n",
+       "2024-11-15 14:43:36.170628   2024-11-18 06:58:08.108243\n",
+       "2024-11-15 15:02:28.997004   2024-11-18 06:58:08.108243\n",
+       "2024-11-15 15:16:29.237773   2024-11-18 06:58:08.108243\n",
+       "                                        ...            \n",
+       "2024-12-16 20:59:59.504389   2024-12-18 14:34:03.919800\n",
+       "2024-12-17 14:38:13.296365   2024-12-18 19:08:29.806640\n",
+       "2024-12-17 16:31:24.270556   2024-12-18 19:08:29.806640\n",
+       "2024-12-17 20:45:34.771591   2024-12-18 21:03:19.567693\n",
+       "2024-12-18 14:34:03.919800   2024-12-19 17:26:20.544849\n",
+       "Name: time, Length: 257, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-05T22:02:38.161575Z",
+     "start_time": "2025-02-05T22:02:37.987948Z"
     }
    },
    "cell_type": "code",
    "source": [
     "ptsl=1\n",
-    "trgt=pd.Series(0.1,index=es_cusum_events)\n",
-    "minRet=0.01\n",
-    "numThread=10\n",
-    "trigger=my_afml.getEvents(volume_bars_df.close,es_cusum_events,ptsl,trgt,minRet,numThread,t1)"
+    "trgt=vol2\n",
+    "minRet=0.00003\n",
+    "numThread=1\n",
+    "trigger=my_afml.getEvents(volume_bars_df.close,es_cusum_events,ptsl,trgt,minRet,numThread,t1)\n",
+    "print(trigger)\n",
+    "print(trigger.shape)"
    ],
-   "id": "35e141b8ea6b0ef",
+   "id": "7cc502f48fe2a1f3",
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-04 22:11:13.685461 100.0% applyPtSlOnT1 done after 0.0 minutes. Remaining 0.0 minutes.\n"
+      "Running processJobs_\n",
+      "                                                   t1      trgt\n",
+      "2024-11-18 13:00:00.991865 2024-11-18 15:29:54.497644  0.001768\n",
+      "2024-11-18 14:35:36.212295 2024-11-18 15:29:54.497644  0.001770\n",
+      "2024-11-18 15:00:41.163755 2024-11-18 15:29:54.497644  0.001564\n",
+      "2024-11-18 15:29:54.497644 2024-11-18 16:46:11.699835  0.001548\n",
+      "2024-11-18 16:00:36.713567 2024-11-19 09:28:48.026253  0.001741\n",
+      "...                                               ...       ...\n",
+      "2024-12-18 19:08:29.806640 2024-12-18 20:33:00.914784  0.003980\n",
+      "2024-12-18 20:33:00.914784 2024-12-18 21:03:19.567693  0.004736\n",
+      "2024-12-18 21:03:19.567693 2024-12-19 14:32:08.428649  0.006430\n",
+      "2024-12-19 14:32:08.428649                        NaT  0.006900\n",
+      "2024-12-19 17:26:20.544849                        NaT  0.007644\n",
+      "\n",
+      "[244 rows x 2 columns]\n",
+      "(244, 2)\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-05T22:03:21.336291Z",
+     "start_time": "2025-02-05T22:03:21.326272Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "bins=my_afml.getBins(trigger,volume_bars_df.close)\n",
+    "print(bins)"
+   ],
+   "id": "77f10338c32aa3b7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 ret  bin\n",
+      "2024-11-18 13:00:00.991865  0.001864  1.0\n",
+      "2024-11-18 14:35:36.212295  0.002799  1.0\n",
+      "2024-11-18 15:00:41.163755  0.002586  1.0\n",
+      "2024-11-18 15:29:54.497644  0.002918  1.0\n",
+      "2024-11-18 16:00:36.713567 -0.004942 -1.0\n",
+      "...                              ...  ...\n",
+      "2024-12-17 20:45:34.771591 -0.004295 -1.0\n",
+      "2024-12-18 14:34:03.919800 -0.018100 -1.0\n",
+      "2024-12-18 19:08:29.806640 -0.014516 -1.0\n",
+      "2024-12-18 20:33:00.914784 -0.013720 -1.0\n",
+      "2024-12-18 21:03:19.567693  0.012119  1.0\n",
+      "\n",
+      "[242 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -235,7 +341,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "7cc502f48fe2a1f3"
+   "id": "c591d2ca4f073065"
   }
  ],
  "metadata": {
