--- a/AFML me.ipynb
+++ b/AFML me.ipynb
@@ -308,7 +308,8 @@
    "cell_type": "code",
    "source": [
     "bins=my_afml.getBins(trigger,volume_bars_df.close)\n",
-    "print(bins)"
+    "print(bins)\n",
+    "print(bins.shape)"
    ],
    "id": "77f10338c32aa3b7",
    "outputs": [
