--- a/resample_1min_bars.ipynb
+++ b/resample_1min_bars.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T16:24:42.991723Z",
+     "start_time": "2025-02-26T16:24:42.174065Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -19,26 +22,63 @@
     "\n",
     "\n",
     "# Load the 1-minute OHLC data and set the first row as column names\n",
-    "data = pd.read_csv('/Users/nicolasatkins/PycharmProjects/AFML/tick_data/barchart.com/concatenated_barchart_data2.csv', header=0,dtype=dtype_mapping,\n",
-    ")"
+    "data = pd.read_csv('./tick_data/barchart.com/concatenated_barchart_data3.csv', header=0, dtype=dtype_mapping\n",
+    ")\n",
+    "# make sure no commas for thousands etc\n"
    ],
-   "id": "2329de4f0824cc27"
+   "id": "2329de4f0824cc27",
+   "outputs": [],
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T16:24:44.931770Z",
+     "start_time": "2025-02-26T16:24:44.887849Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "data.info()",
-   "id": "ca5c6ea5fa3f12a5"
+   "id": "e690757a5badf5d4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 707945 entries, 0 to 707944\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count   Dtype   \n",
+      "---  ------  --------------   -----   \n",
+      " 0   Time    707945 non-null  object  \n",
+      " 1   Symbol  707945 non-null  category\n",
+      " 2   Open    707945 non-null  float64 \n",
+      " 3   High    707945 non-null  float64 \n",
+      " 4   Low     707945 non-null  float64 \n",
+      " 5   Close   707945 non-null  float64 \n",
+      " 6   Volume  707945 non-null  int64   \n",
+      "dtypes: category(1), float64(4), int64(1), object(1)\n",
+      "memory usage: 33.1+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "\n",
-   "id": "e9f193dee56c33a3"
+   "source": "",
+   "id": "3daa228e67fa1654"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "data.head()\n",
+   "id": "6f18b518fa2a1372"
   },
   {
    "metadata": {},
@@ -88,180 +128,29 @@
     "\n",
     "volume_bars_df = pd.DataFrame(volume_bars)"
    ],
-   "id": "7edaba7f2629c2ef"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-25T20:58:21.599925Z",
-     "start_time": "2025-02-25T20:58:21.589243Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "volume_bars_df.info()\n",
-    "\n"
-   ],
-   "id": "af8a13e39688bee2",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 14244 entries, 02 January 2023 to 31 December 2024\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Symbol  14244 non-null  object \n",
-      " 1   Open    14244 non-null  float64\n",
-      " 2   High    14244 non-null  float64\n",
-      " 3   Low     14244 non-null  float64\n",
-      " 4   Close   14244 non-null  float64\n",
-      " 5   Volume  14244 non-null  int64  \n",
-      "dtypes: float64(4), int64(1), object(1)\n",
-      "memory usage: 1.3+ MB\n"
-     ]
-    }
-   ],
-   "execution_count": 22
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-25T20:58:48.812664Z",
-     "start_time": "2025-02-25T20:58:48.804591Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "volume_bars_df.head()",
-   "id": "65cb228173b09c30",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                Symbol     Open     High      Low    Close  Volume\n",
-       "Time                                                              \n",
-       "02 January 2023  ESH23  3895.00  3900.00  3849.50  3849.75   50304\n",
-       "03 January 2023  ESH23  3849.50  3867.75  3842.75  3864.00   50044\n",
-       "03 January 2023  ESH23  3864.00  3888.50  3864.00  3882.75   50000\n",
-       "03 January 2023  ESH23  3882.75  3905.75  3882.50  3903.00   50498\n",
-       "03 January 2023  ESH23  3903.00  3906.75  3872.25  3877.75   50126"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>02 January 2023</th>\n",
-       "      <td>ESH23</td>\n",
-       "      <td>3895.00</td>\n",
-       "      <td>3900.00</td>\n",
-       "      <td>3849.50</td>\n",
-       "      <td>3849.75</td>\n",
-       "      <td>50304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03 January 2023</th>\n",
-       "      <td>ESH23</td>\n",
-       "      <td>3849.50</td>\n",
-       "      <td>3867.75</td>\n",
-       "      <td>3842.75</td>\n",
-       "      <td>3864.00</td>\n",
-       "      <td>50044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03 January 2023</th>\n",
-       "      <td>ESH23</td>\n",
-       "      <td>3864.00</td>\n",
-       "      <td>3888.50</td>\n",
-       "      <td>3864.00</td>\n",
-       "      <td>3882.75</td>\n",
-       "      <td>50000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03 January 2023</th>\n",
-       "      <td>ESH23</td>\n",
-       "      <td>3882.75</td>\n",
-       "      <td>3905.75</td>\n",
-       "      <td>3882.50</td>\n",
-       "      <td>3903.00</td>\n",
-       "      <td>50498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03 January 2023</th>\n",
-       "      <td>ESH23</td>\n",
-       "      <td>3903.00</td>\n",
-       "      <td>3906.75</td>\n",
-       "      <td>3872.25</td>\n",
-       "      <td>3877.75</td>\n",
-       "      <td>50126</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 23
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-25T21:00:43.282864Z",
-     "start_time": "2025-02-25T21:00:43.218706Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "volume_bars_df.to_csv('tick_data/bars/volume_bars_barchart.csv', index=False)",
-   "id": "916c164439f665b0",
-   "outputs": [],
-   "execution_count": 26
+   "id": "634f9841bf22c488"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "8566abc5b6649fe0"
+   "source": [
+    "volume_bars_df.info()\n",
+    "\n"
+   ],
+   "id": "72f6cacf922f65a4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "volume_bars_df['Time'] = pd.to_datetime(volume_bars_df['Time'])\n",
+    "volume_bars_df.to_csv('tick_data/bars/volume_bars_barchart.csv', index=False)\n"
+   ],
+   "id": "6a29e296657302a2"
   }
  ],
  "metadata": {
